--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material-ui/icons": "4.9.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2"
+    "enzyme-adapter-react-16": "1.15.2",
+    "prettier": "^2.2.1"
   }
 }
